Closed Bug 386300 Opened 19 years ago Closed 18 years ago

Caret disappears when pressing UP at the top of a contenteditable region

Categories

(Core :: DOM: Editor, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9alpha8

People

(Reporter: peterv, Assigned: peterv)

References

Details

(Whiteboard: [dbaron-1.9:RwCc])

Attachments

(1 file, 1 obsolete file)

When pressing UP at the top of a contenteditable region the caret disappears. It should probably go to the beginning of the editable region. Might need a new nsISelectionController implementation for that. See also bug 237964, comment 70.
Status: NEW → ASSIGNED
Priority: -- → P2
(In reply to comment #0) > When pressing UP at the top of a contenteditable region the caret disappears. > It should probably go to the beginning of the editable region. Might need a new > nsISelectionController implementation for that. > See also bug 237964, comment 70. Is not that important, but perhaps the caret should remain where it is? Same as in textarea? Go at the beginning of the editable region on CTRL+Home. Maybe: CTRL+UP goto to the beginnig of the element (IE like).
This should probably be a blocker. The fact that the cursor disappears make editing very confusing.
Flags: blocking1.9?
Flags: blocking1.9? → blocking1.9+
Attached patch v1 (obsolete) — Splinter Review
Goes to the beginning/end of the editable region, which is fairly standard behaviour in editors on Mac and Linux and also what Safari does. It is different from what IE does. Not really sureyet if we should go with that or not, or make this behaviour platform-specific.
Attached patch v1.1Splinter Review
Pressing up at the top of a textarea moves the cursor to the beginning of the textarea too, so let's go with this. The patch is based on nsTextInputSelectionImpl::CompleteMove.
Attachment #272661 - Attachment is obsolete: true
Attachment #272792 - Flags: superreview?(jst)
Attachment #272792 - Flags: review?(jst)
Attachment #272792 - Flags: superreview?(jst)
Attachment #272792 - Flags: superreview+
Attachment #272792 - Flags: review?(jst)
Attachment #272792 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
This broke cmd_moveTop in editor/midas - TakeFocus, and therefore HandleClick, expects its aNewFocus element to have a parent.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Whiteboard: [dbaron-1.9:RwCc]
Depends on: 394264
Regression from comment 5 is filed under bug 394264. This bug is fixed as filed.
Status: REOPENED → RESOLVED
Closed: 18 years ago18 years ago
Resolution: --- → FIXED
Verified fix on Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b3) Gecko/2008020418 Firefox/3.0b3. testcase in comment #3 and #4 is working.
Status: RESOLVED → VERIFIED
Depends on: 587030
No longer depends on: 587030
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: