Fix for bug 386300 (Caret disappears when pressing UP at the top of a contenteditable region). r/sr=jst.